src/objects/Hub_Building_Site__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Hub__c</fullName>
        <label>Description Hub</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Postalcode__c</fullName>
        <label>Postalcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Projecten__c</referenceTo>
        <relationshipLabel>Building Sites</relationshipLabel>
        <relationshipName>Hubs_Building_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>SF_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefoonnummer_contactpersoon_bouwplaats__c</fullName>
        <label>Telefoonnummer contactpersoon bouwplaats</label>
        <type>Phone</type>
    </fields>
    <label>Hub/Bouwplaats</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <label>Hub/Buildinglocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hub/Bouwplaats</pluralLabel>
    <recordTypes>
        <fullName>Building_Site</fullName>
        <active>true</active>
        <label>Building Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hub</fullName>
        <active>true</active>
        <label>Hub</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>